@@ -1,0 +1,8 @@
+#!/usr/bin/perl
+use strict;
+use warnings;
+use Test::More tests => 1;
+
+# Trivial test to make sure our module loads.
+
+BEGIN { use_ok('WebService::Idonethis') };
