@@ -1,6 +1,7 @@
 {{$NEXT}}
 
 * Remove spurious warnings when printing unicode/utf8.
+* Added trivial test case for loading module (load.t).
 
 0.10      2013-02-19 02:20:24 Australia/Melbourne
 
